# AI-Agent-Streamlit

./: .replit  README.md  auto_demo.py  config.py  demo_mode.py  main.py  pyproject.toml  replit.md  requirements.txt  streamlit_app.py  test_assistant.py  web_app.py
.config/pulse/: cookie
.local/state/replit/agent/filesystem/: filesystem_state.json
templates/: index.html
voice_assistant/: __init__.py  command_processor.py  speech_handler.py  tts_handler.py
