[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "speechrecognition>=3.14.3",
    "wikipedia-api>=0.8.1",
    "wikipedia>=1.4.0",
    "flask>=3.1.1",
    "streamlit>=1.47.1",
]
